--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -79,18 +79,16 @@
   text-align: center;
   background-color: @input-group-addon-bg;
   border: 1px solid @input-group-addon-border-color;
-  border-radius: @border-radius-base;
+  box-shadow: 0 3px 0 #ddd;
 
   // Sizing
   &.input-sm {
     padding: @padding-small-vertical @padding-small-horizontal;
     font-size: @font-size-small;
-    border-radius: @border-radius-small;
   }
   &.input-lg {
     padding: @padding-large-vertical @padding-large-horizontal;
     font-size: @font-size-large;
-    border-radius: @border-radius-large;
   }
 
   // Nuke default margins from checkboxes and radios to vertically center within.
