--- a/less/variables.less
+++ b/less/variables.less
@@ -433,7 +433,7 @@
 @pagination-border:                    #ddd;
 
 @pagination-hover-color:               @link-hover-color;
-@pagination-hover-bg:                  @gray-lighter;
+@pagination-hover-bg:                  #ddd; //default is @gray-lighter
 @pagination-hover-border:              #ddd;
 
 @pagination-active-color:              #fff;
