child-theme-1 list-group (Fix)

--- a/less/list-group.less
+++ b/less/list-group.less
@@ -42,6 +42,7 @@
   // Align badges within list items
   > .badge {
     float: right;
+    background-color: #9a9a9a;
   }
   > .badge + .badge {
     margin-right: 5px;
