--- a/less/variables.less
+++ b/less/variables.less
@@ -648,7 +648,7 @@
 //** Background color on `.list-group-item`
 @list-group-bg:                 #fff;
 //** `.list-group-item` border color
-@list-group-border:             #ddd;
+@list-group-border:             #F0F0F0; //default is #ddd
 //** List group border radius
 @list-group-border-radius:      @border-radius-base;
 
